--- a/2.javascript/面向对象.md
+++ b/2.javascript/面向对象.md
@@ -30,7 +30,7 @@ obj['your' + 'name'] = 'Jake'
 
 ```javascript
 let person = {
-	name: 'noko',
+  name: 'noko',
   age: 18
 }
 
@@ -40,7 +40,7 @@ person.sex = 'man'
 
 ### 2. 使用属性描述符
 
-| **属性描述符**   | 作用                                                         |
+| 属性描述符   | 作用                                                         |
 | :--------------- | ------------------------------------------------------------ |
 | [[Configurable]] | 能否 delete 属性。设置为 false 后，除了能将 writable 设为 false，其他不可再重洗配置 |
 | [[Enumerable]]   | 表示是否可被 for-in 遍历属性                                 |
@@ -50,23 +50,23 @@ person.sex = 'man'
 
 ```javascript
 const person = {
-	name: 'noko'
+  name: 'noko'
 }
 
 // 定义一个属性
 // 如果没有指定的属性描述符会默认为 false
 Object.defineProperty(person, 'age', {
-	writable: false,
+  writable: false,
   value: 18
 })
 
 // 定义多个属性
 Object.defineProperties(person, {
-	name: {
-  	value: 'noko'
+  name: {
+    value: 'noko'
   },
   age: {
-  	value: 18
+    value: 18
   }
 })
 
@@ -90,16 +90,16 @@ console.log(descriptor.value) // 'noko'
 
 ```javascript
 const person = {
-	name: 'noko',
+  name: 'noko',
 }
 
 Object.defineProperty(person, 'age', {
-	get: function() {
-  	return 18
+  get: function() {
+    return 18
   },
   set: function(newValue) {
-  	if(newValue >= 18) {
-    	console.log('我未成年')
+    if(newValue >= 18) {
+      console.log('我未成年')
     }
   }
 })
@@ -131,7 +131,7 @@ myImmutableObject.foo; // [1,2,3,4]
 const myObject = {}
 
 Object.defineProperty(myObject, 'FAVORITE_NUMBER', {
-	value: 23,
+  value: 23,
   writbale: false,
   configurable: false
 })
@@ -143,11 +143,11 @@ Object.defineProperty(myObject, 'FAVORITE_NUMBER', {
 
 ```javascript
 const myObject = {
-	a:1
+  a:1
 }
 
 const myObject = {
-	a:1
+  a:1
 }
 
 Object.preventExtensions(myObject)
@@ -182,7 +182,7 @@ myObject.b // undefined
 ```javascript
 // 举一个栗子
 function Person(name) {
-	thia.name = name
+  thia.name = name
 }
 
 Person.prototype.age = 18
@@ -215,14 +215,14 @@ person.hasOwnProperty('gender') // false
 // 显然上面两个 API 单独使用是无法判断的，需要组合使用
 
 function attributeSource(obj, propertyName) {
-	if(propertyName in obj) {
-  	if(obj.hasOwnProperty(propertyName)) {
-			console.log(`${propertyName}: 来源于自身`)
+  if(propertyName in obj) {
+    if(obj.hasOwnProperty(propertyName)) {
+      console.log(`${propertyName}: 来源于自身`)
     } else {
-    	console.log(`${propertyName}: 来源于原型链`)
+      console.log(`${propertyName}: 来源于原型链`)
     }
   } else {
-  	console.log(`${propertyName}: 不存在对象和原型链`)
+    console.log(`${propertyName}: 不存在对象和原型链`)
   }
 }
 
@@ -347,28 +347,28 @@ Object.values(father)
 ```javascript
 // 部署 iterator 接口
 Object.defineProperty(father, Symbol.iterator, {
-	enumerable: false,
+  enumerable: false,
   writable: false,
   configurable: true,
   value: function() {
-  	const o = this
+    const o = this
     let index = 0
     const keys = Object.keys(o)
     
     return {
-    	next: function() {
-    		return {
-        	value: o[keys[index++]],
+      next: function() {
+        return {
+          value: o[keys[index++]],
           done: (index > keys.length)
         }
-    	}
+      }
     }
   }
 })
 
 // 遍历
 for(let value of father) {
-	console.log(value)
+  console.log(value)
 }
 ```
 
@@ -391,7 +391,7 @@ for(let value of father) {
 
 ```javascript
 function createPerson(name) {
-	const o = new Object()
+  const o = new Object()
   
   o.name = name
   o.getName = () => {console.log(this.name)}
@@ -410,13 +410,13 @@ const person = createPerson('noko')
 
 ```javascript
 function Person(name) {
-	this.name = name
-	this.getName = getName
+  this.name = name
+  this.getName = getName
 }
 
 // 防止多次 new 重复生成函数
 function getName() {
-	console.log(this.name)
+  console.log(this.name)
 }
 
 const person = new Person('noko')
@@ -436,7 +436,7 @@ function Person(name) {}
 
 Person.prototype.name = 'noko'
 Person.prototype.getName = function () {
-	console.log(this.name)
+  console.log(this.name)
 }
 
 const person = new Person()
@@ -453,7 +453,7 @@ function Person() {}
 
 Person.prototype = {
   constructor: Person,
-	name: 'noko',
+  name: 'noko',
   getName: () => { console.log(this.name) }
 }
 
@@ -468,11 +468,11 @@ const person = new Person()
 
 ```javascript
 function Person(name) {
-	this.name = name
+  this.name = name
 }
 
 Person.prototype = {
-	constructor: Person,
+  constructor: Person,
   getName: () => { consolo.log(this.name) }
 }
 
@@ -485,10 +485,10 @@ const person = new Preson('noko')
 
 ```javascript
 function Person(name) {
-	this.name = name
+  this.name = name
   
   if(typeof this.getName !== 'function') {
-  	Person.prototype.getName = () => { console.log(this.name) }
+    Person.prototype.getName = () => { console.log(this.name) }
   }
 }
 
@@ -503,11 +503,11 @@ const person = new Person()
 // 我们可以这么做
 
 function Car(carName) {
-	this.carName = carName
+  this.carName = carName
   if(typeof this.getCarName !== 'function') {
-  	Car.prototype = {
+    Car.prototype = {
       constructor: Car,
-    	getCarName: () => { console.log(this.carName) }
+      getCarName: () => { console.log(this.carName) }
     }
     
     return new Car(carName) // 手动 return 实例对象使得 new 第四步返回我们制定的对象
@@ -526,7 +526,7 @@ const car = new Car()
 // 使用场景：如果用的 Array 或者 Date 等这些不能好修改原型的原生构造函数时，可以使用
 
 function SpecialArray() {
-	const arr = new Array()
+  const arr = new Array()
   
   arr.push.apply(arr, arguments)
   arr.toPipedString = () => { 
@@ -549,7 +549,7 @@ const color = new SpecialArray('red', 'blue', 'green')
 
 ```javascript
 function Person(name, age) {
-	const o = new Object()
+  const o = new Object()
   
   o.getName = () => { console.log(name) }
   
@@ -644,18 +644,18 @@ const deepClone = (function d(obj) {
 
 ```javascript
 function SuperType() {
-	this.name = 'noko'
+  this.name = 'noko'
 }
 SuperType.prototype.getName = function() {
-	console.log(this.name)
+  console.log(this.name)
 }
 
 function SubType (){
-	this.age = 18
+  this.age = 18
 }
 SubType.prototype = new SuperType()
 SubType.prototype.getAge = function() {
-	console.log(this.age)
+  console.log(this.age)
 }
 
 const instance = new SubType()
@@ -670,12 +670,12 @@ console.log(instance.getAge())
 
 ```javascript
 function SuperType(name) {
-	this.name = name
+  this.name = name
 }
 
 function SubType(age) {
-	SurperType.call(this, 'noko')
-	this.age = age
+  SurperType.call(this, 'noko')
+  this.age = age
 }
 
 const instance = new SubType(18)
@@ -698,7 +698,7 @@ function SuperType(name){
 }
 
 SuperType.prototype.sayName = function(){
-    console.log(this.name);
+  console.log(this.name);
 };
 
 function SubType(name, age){
@@ -711,14 +711,14 @@ function SubType(name, age){
 SubType.prototype = new SuperType();
 SubType.prototype.constructor = SubType;
 SubType.prototype.sayAge = function(){
-	console.log(this.age);
+  console.log(this.age);
 };
 
 var instance1 = new SubType("Nicholas", 29);
 instance1.colors.push("black");
 console.log('color1:' + instance1.colors);
 instance1.sayName();
-instance1.sayAge()	;
+instance1.sayAge()  ;
 
 var instance2 = new SubType("Greg", 27);
 console.log('color2:' + instance2.colors);
@@ -732,7 +732,7 @@ instance2.sayAge();
 
 ```javascript
 function createObj(o) {
-	function F() {}
+  function F() {}
   F.prototype = o
   return new F()
 }
@@ -742,7 +742,7 @@ function createObj(o) {
 
 ```javascript
 function createObj(o) {
-	const newO = Object.create(o)
+  const newO = Object.create(o)
   o.prototype.name = 'noko'
   return o
 }
@@ -752,16 +752,16 @@ function createObj(o) {
 
 ```javascript
 function SuperType() {
-	this.name = 'noko'
+  this.name = 'noko'
   this.color = ['green', 'red', 'blue']
 }
 
 Supertype.prototype.getColor = function() {
-	console.log(this.color)
+  console.log(this.color)
 }
 
 function SubType() {
-	this.age = 18	
+  this.age = 18  
 }
 
 function object(o) {
@@ -773,14 +773,14 @@ function object(o) {
 // 继承方法
 inherit(SubType, SuperType) {
   const prototype = object(SubType.prototype)
- 	prototype.construtor = SubType
+  prototype.construtor = SubType
   SubType.protptype = prototype
 }
 ```
 
 
-**所有的仅基于原型的继承都有的通病：**原型上有引用类型的数据被修改的时候，所有的使用到该属性的实例都可能会受到影响。
+**所有的仅基于原型的继承都有的通病：** 原型上有引用类型的数据被修改的时候，所有的使用到该属性的实例都可能会受到影响。
 
-**所有的基于构造函数的继承都由的通病：**实例化构造函数时，被借用的构造函数都将会被执行一遍，也就是说多次实例化，则被借用的构造函数就会执行多次。
+**所有的基于构造函数的继承都由的通病：** 实例化构造函数时，被借用的构造函数都将会被执行一遍，也就是说多次实例化，则被借用的构造函数就会执行多次。
 
-**寄生组合式继承的优点：**实例化时只会执行一遍 inherit 函数和 object 函数，不会执行上层的构造函数 SuperType 性能更好
+**寄生组合式继承的优点：** 实例化时只会执行一遍 inherit 函数和 object 函数，不会执行上层的构造函数 SuperType 性能更好
